# BuildingMod

./: .appveyor.yml  .gitignore  .travis.yml  CMakeLists.txt  CMakeSettings.json  README.md  appveyor.yml
BuildingMod/: BuildingMod.def  CMakeLists.txt  pch.h
BuildingMod/game/: Geometry.h
BuildingMod/game/BuildSystem/: ConnectionManager.cpp  ConnectionManager.h  GameObject.cpp  GameObject.h  GameObjectFactory.cpp  GameObjectFactory.h  ObjectManager.cpp  ObjectManager.h
BuildingMod/game/BuildSystem/BuildObjects/: AimTestResult.cpp  AimTestResult.h  BuildState.h  GameObject.cpp  GameObject.h  IConnectionPoints.cpp  IConnectionPoints.h  Transform.h
BuildingMod/game/BuildSystem/BuildObjects/Components/: IColliderComponent.cpp  IColliderComponent.h  IComponent.cpp  IComponent.h  IStabilityComponent.cpp  IStabilityComponent.h  OwnerComponent.cpp  OwnerComponent.h  RendererComponent.cpp  RendererComponent.h  StabilityComponent.cpp  StabilityComponent.h  Transform.cpp  Transform.h  TriangleCollider.cpp  TriangleCollider.h  TriggerZoneComponent.cpp  TriggerZoneComponent.h  VisualizerComponent.cpp  VisualizerComponent.h
BuildingMod/game/BuildSystem/BuildObjects/Components/StabilityComponent/: IConnectionPoints.cpp  IConnectionPoints.h  IObjectResolver.cpp  IObjectResolver.h
BuildingMod/game/BuildSystem/BuildObjects/Foundation/: Foundation.cpp  Foundation.h  FoundationTriangle.cpp  FoundationTriangle.h
BuildingMod/game/BuildSystem/BuildObjects/FoundationBase/: FoundationBase.cpp  FoundationBase.h
BuildingMod/game/BuildSystem/BuildObjects/FoundationSquare/: FoundationSquare.cpp  FoundationSquare.h  SquareToSquarePoints.cpp  SquareToSquarePoints.h  SquareToTrianglePoints.cpp  SquareToTrianglePoints.h  SquareZoneComponent.cpp  SquareZoneComponent.h  StabilityComponent.cpp  StabilityComponent.h
BuildingMod/game/BuildSystem/BuildObjects/FoundationSquare/Resolvers/Foundation/: FoundationResolver.cpp  FoundationResolver.h  SquareToSquarePoints.cpp  SquareToSquarePoints.h  SquareToTrianglePoints.cpp  (+1 more)
BuildingMod/game/BuildSystem/BuildObjects/FoundationTriangle/: FoundationTriangle.cpp  FoundationTriangle.h  StabilityComponent.cpp  StabilityComponent.h  TriangleCollider.cpp  TriangleCollider.h  TriangleToSquarePoints.cpp  TriangleToSquarePoints.h  TriangleToTrianglePoints.cpp  TriangleToTrianglePoints.h  TriangleZoneComponent.cpp  TriangleZoneComponent.h
BuildingMod/game/BuildSystem/BuildObjects/Materials/: Material.cpp  Material.h
BuildingMod/game/BuildSystem/BuildObjects/WallBase/: WallBase.cpp  WallBase.h
BuildingMod/game/BuildSystem/BuildObjects/WallFull/: StabilityComponent.cpp  StabilityComponent.h  WallFull.cpp  WallFull.h
BuildingMod/game/BuildSystem/BuildingObjects/: BuildingObject.cpp  BuildingObject.h  Objects.h
BuildingMod/game/BuildSystem/BuildingObjects/FoundationBase/: FoundationBase.cpp  FoundationBase.h
BuildingMod/game/BuildSystem/BuildingObjects/FoundationSquare/: FoundationSquare.cpp  FoundationSquare.h  StabilityComponent.cpp  StabilityComponent.h
BuildingMod/game/BuildSystem/BuildingObjects/FoundationTriangle/: FoundationTriangle.cpp  FoundationTriangle.h  StabilityComponent.cpp  StabilityComponent.h  TriangleCollider.h
BuildingMod/game/BuildSystem/BuildingObjects/Foundations/: FoundationBase.cpp
BuildingMod/game/BuildSystem/BuildingObjects/Foundations/FoundationSquare/: FoundationSquare.h  StabilityComponent.cpp  StabilityComponent.h
BuildingMod/game/BuildSystem/BuildingObjects/Foundations/FoundationTriangle/: FoundationTriangle.cpp  FoundationTriangle.h  StabilityComponent.cpp  StabilityComponent.h  TriangleCollider.h
BuildingMod/game/BuildSystem/BuildingObjects/Materials/: Material.h
BuildingMod/game/BuildSystem/BuildingObjects/WallBase/: WallBase.cpp  WallBase.h
BuildingMod/game/BuildSystem/BuildingObjects/WallFull/: StabilityComponent.cpp  StabilityComponent.h  WallFull.cpp  WallFull.h
BuildingMod/game/BuildSystem/BuildingObjects/Walls/: WallBase.cpp  WallBase.h  Walls.h
BuildingMod/game/BuildSystem/BuildingObjects/Walls/Resolvers/: AdditionalResolver.cpp  AdditionalResolver.h
BuildingMod/game/BuildSystem/BuildingObjects/Walls/WallFull/: StabilityComponent.h  WallFull.cpp  WallFull.h
BuildingMod/game/BuildSystem/Components/: IColliderComponent.cpp  IColliderComponent.h  IComponent.h  IStabilityComponent.cpp  IStabilityComponent.h  OwnerComponent.cpp  OwnerComponent.h  VisualizerComponent.h
BuildingMod/game/BuildSystem/Components/StabilityComponent/: ConnectionTypes.h  IConnectionPoints.h  IObjectResolver.cpp  IObjectResolver.h
BuildingMod/game/Geometry/: Edge.cpp  Edge.h  Geometry.cpp  Geometry.h  Node.cpp  Node.h  Point.cpp  Point.h  Polygon.cpp  Polygon.h  Shape.cpp  Shape.h  Triangle.cpp  Triangle.h  Vertex.cpp  Vertex.h  aabb2.cpp  aabb2.h  mat4.cpp  mat4.h  ray.cpp  ray.h  vec2.cpp  vec2.h  vec3.cpp  vec3.h  vec4.cpp  vec4.h
BuildingMod/game/Server/: FrameState.cpp  FrameState.h  PrecacheManager.cpp  PrecacheManager.h  ServerHooks.cpp  ServerHooks.h
BuildingMod/game/Utility/: AimTestResult.h  EdictFlags.cpp  IObservable.h  IObserver.h  Messages.cpp  ObservableVector.h  Transform.h  Utility.cpp  Utility.h
BuildingMod/module/: main.cpp  main.h
BuildingMod/module/natives/: natives_gameobject.cpp  natives_gameobject.h  natives_helper.h  natives_ping.cpp  natives_ping.h
BuildingMod/module/sdk/: amxxmodule.cpp  engine_api.cpp  engine_rehlds_api.cpp  engine_rehlds_api.h  gamedll_api.cpp  gamedll_api.h  meta_api.cpp
test/: CMakeLists.txt  ConnectionTests.cpp  GameObjectTests.cpp  GeometryTests.cpp  MemoryTests.cpp  ObservableVectorTests.cpp  TransformTests.cpp  main.cpp
test/Game/: CMakeLists.txt  ConnectionSuite.cpp  ConnectionTests.cpp  GameObjectSuite.cpp  GameObjectTests.cpp  GeometryTests.cpp  StabilitySuite.cpp  main.cpp  mocks.cpp  mocks.h
test/Memory/: CMakeLists.txt  ComponentsSuite.cpp  GameObjectSuite.cpp  UtilitySuite.cpp  main.cpp
test/Utility/: CMakeLists.txt  ObservableVectorTests.cpp  TransformSuite.cpp  TransformTests.cpp  main.cpp
tests/math/geometry/: CMakeLists.txt  Triangle.cc
(+283 files in other folders)
